--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,47 +1,71 @@
-name: Build and deploy Jekyll site
+# name: Build and deploy Jekyll site
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build_and_deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v2
+
+#     - name: Set up Ruby
+#       uses: ruby/setup-ruby@v1
+#       with:
+#         ruby-version: 3.2
+
+#     - name: Cache Ruby gems
+#       uses: actions/cache@v2
+#       with:
+#         path: vendor/bundle
+#         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+#         restore-keys: |
+#           ${{ runner.os }}-gems-
+#     - name: jekyll-action
+#       uses: helaili/jekyll-action@v2  
+#       with:                               
+#         token: ${{ secrets.YOUR_CUSTOM_TOKEN }}
+#         target_branch: 'gh-pages'
+
+#     - name: Install dependencies
+#       run: |
+#         bundle config path vendor/bundle
+#         bundle install --jobs 4 --retry 3
+
+#     - name: Build Jekyll site
+#       run: bundle exec jekyll build --trace
+  
+      
+#     - name: Deploy to GitHub Pages
+#       uses: peaceiris/actions-gh-pages@v3
+#       with:
+#         token: ${{ secrets.YOUR_CUSTOM_TOKEN }}
+#         publish_dir: ./_site
+
+
+
+name: Build and deploy Jekyll site to GitHub Pages
 
 on:
   push:
     branches:
-      - main
+      - main # or master before October 2020
 
 jobs:
-  build_and_deploy:
+  github-pages:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.2
-
-    - name: Cache Ruby gems
-      uses: actions/cache@v2
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
-    - name: jekyll-action
-      uses: helaili/jekyll-action@v2  
-      with:                               
-        token: ${{ secrets.YOUR_CUSTOM_TOKEN }}
-        target_branch: 'gh-pages'
-
-    - name: Install dependencies
-      run: |
-        bundle config path vendor/bundle
-        bundle install --jobs 4 --retry 3
-        
-    - name: Build Jekyll site
-      run: bundle exec jekyll build --trace
-  
-      
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        token: ${{ secrets.YOUR_CUSTOM_TOKEN }}
-        publish_dir: ./_site
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+      - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
+        with:                                # Some relative inputs of your action
+          token: ${{ secrets.GITHUB_TOKEN }}
