--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll/scholar
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -55,3 +56,8 @@ plugins:
 #   - vendor/ruby/
 
 
+
+scholar:
+  style: apa
+  source: _bibliography
+  bibliography: bibliography.bib
