--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,6 @@ plugins:
 
 
 scholar:
-  style: modern-language-association
+  style: simple-ieee.csl
   source: _bibliography
   bibliography: bibliography.bib
